syntax = "proto3";

package resources.permissions;
option go_package = "github.com/galexrt/fivenet/proto/resources/permissions;permissions";

import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

message Permission {
  uint64 id = 1; // @gotags: alias:"id"
  resources.timestamp.Timestamp created_at = 2; // @gotags: alias:"created_at"
  resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"
  string name = 4 [(validate.rules).string.max_len = 255]; // @gotags: alias:"name"
  string guard_name = 5 [(validate.rules).string.max_len = 255]; // @gotags: alias:"guard_name"
  string description = 6 [(validate.rules).string.max_len = 255]; // @gotags: alias:"description"
}

message Role {
  uint64 id = 1; // @gotags: alias:"id"
  resources.timestamp.Timestamp created_at = 2; // @gotags: alias:"created_at"
  resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"
  string name = 4 [(validate.rules).string.max_len = 255]; // @gotags: alias:"name"
  string guard_name = 5 [(validate.rules).string.max_len = 255]; // @gotags: alias:"guard_name"
  string description = 6 [(validate.rules).string.max_len = 255]; // @gotags: alias:"description"
  repeated Permission permissions = 7;
}
